# extractEmbedFilePDF

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: extract_files.rs  filter_files.rs
src/: analyzer.rs  analyzer_extraction.rs  analyzer_validation.rs  embedded.rs  extraction_engine.rs  file_discovery.rs  file_parsing.rs  lib.rs  main.rs  pdf_utils.rs  validator.rs
tests/: integration_tests.rs
